--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -16,8 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   e2e-tests:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    # Changed runner from ubuntu-latest to windows-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
