--- a/shoopingCart/package.json
+++ b/shoopingCart/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "e2e": "wdio run ./wdio.conf.js",
     "allure:clean": "rm -rf ./allure-results ./allure-report",
-    "allure:generate": "allure generate --clean && allure serve",
+    "allure:generate": "allure generate --clean",
     "allure:open": "allure open ./allure-report"
   },
   "author": "",
