--- a/shoopingCart/package.json
+++ b/shoopingCart/package.json
@@ -16,6 +16,7 @@
     "@wdio/cli": "^9.10.1",
     "@wdio/local-runner": "^9.10.1",
     "@wdio/mocha-framework": "^9.10.1",
-    "@wdio/spec-reporter": "^9.10.1"
+    "@wdio/spec-reporter": "^9.10.1",
+    "allure-commandline": "^2.27.0"
   }
 }
